fix(faq): increase mobile gap

--- a/src/styles/components/_faq.scss
+++ b/src/styles/components/_faq.scss
@@ -33,7 +33,7 @@
 
     @include down(lg) {
       grid-template-columns: 1fr;
-      gap: 1.5rem;
+      gap: 3.5rem;
     }
 
     @include up(ultra) {
@@ -132,7 +132,7 @@
     transition: color 0.35s ease;
 
     @include down(lg) {
-      gap: 0.75rem;
+      gap: 1rem;
       font-size: 1.5rem;
       font-weight: $font-medium;
     }
